--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -21,6 +21,8 @@
 }
 
 .page {
+    max-width: 1280px;
+    margin: 0 auto;
     font-family: 'Inter', sans-serif;
     color: var(--main-text);
     background-color: var(--main-bg);
