--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
 }
 
 @font-face {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     src: url(../../fonts/Inter-Black.woff) format('woff'),
          url(../../fonts/Inter-Black.woff2) format('woff2'),
          url(../../fonts/Inter-Black.ttf) format('ttf');
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter';
     src: url(../../fonts/Inter-Regular.woff) format('woff'),
          url(../../fonts/Inter-Regular.woff2) format('woff2'),
          url(../../fonts/Inter-Regular.ttf) format('ttf');
@@ -23,7 +23,7 @@
 .page {
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     color: var(--main-text);
     background-color: var(--main-bg);
     -webkit-font-smoothing: antialiased;
