--- a/pages/index.css
+++ b/pages/index.css
@@ -12,3 +12,8 @@
 @import url(../blocks/lead/__illustration/lead__illustration.css);
 @import url(../blocks/lead/__img/lead__img.css);
 @import url(../blocks/lead/__img-caption/lead__img-caption.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/travell-facts/travell-facts.css);
+@import url(../blocks/travell-facts/__item/travell-facts__item.css);
