add section places

--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,12 +1,13 @@
 .gallery {
     padding: 92px 48px 0;
-    max-width: (100% - 96px);
+    max-width: calc(100% - 96px);
 }
 
 @media screen and (max-width: 768px) {
     .gallery {
         padding-left: 24px;
         padding-right: 24px;
+        max-width: calc(100% - 48px);
     }
 }
 
@@ -14,5 +15,6 @@
     .gallery {
         padding-left: 16px;
         padding-right: 16px;
+        max-width: calc(100% - 32px);
     }
 }
