--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -6,3 +6,9 @@
     line-height: 1.22;
     font-weight: 400;
 }
+
+@media screen and (max-width: 320px) {
+    .place__link {
+        padding-left: 16px;
+    }  
+}
