--- a/blocks/place/__secondary-text/place__secondary-text.css
+++ b/blocks/place/__secondary-text/place__secondary-text.css
@@ -7,3 +7,9 @@
     letter-spacing: 2px;
     text-transform: uppercase;
 }
+
+@media screen and (max-width: 320px) {
+    .place__secondary-text {
+        padding-left: 16px;
+    }  
+}
