--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -5,3 +5,9 @@
     flex-direction: column;
     gap: 26px;
 }
+
+@media screen and (max-width: 768px) {
+    .place__text {
+        gap: 25px;
+    }   
+}
