--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,6 +2,25 @@
     display: flex;
     flex-direction: column;
     gap: 80px;
-    padding: 92px 148px 0;
+    padding: 92px 148px;
+}
 
+@media screen and (max-width: 1024px) {
+    .places {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        padding: 88px 24px 90px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places {
+        padding: 64px 0 66px;
+        gap: 50px;
+    }
 }
