--- a/blocks/gallery/__list/gallery__list.css
+++ b/blocks/gallery/__list/gallery__list.css
@@ -7,15 +7,14 @@
     list-style: none;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 769px) {
     .gallery__list {
         grid-template-columns: repeat(3, 1fr);
         gap: 14px;
     }
 }
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .gallery__list {
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
