--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -10,7 +10,8 @@
 
 @media screen and (max-width: 1024px) {
     .cover__link {
-        min-width: 100%;
         left: 0;
+        padding: 0;
+        min-width: 100%;
     }
 }
