--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -20,6 +20,10 @@
     background-color: rgba(42,44,47,0.3);
 }
 
+.cover__link:hover + .cover__overlay:before {
+    background-color: rgba(42,44,47,0.8);
+}
+
 @media screen and (max-width: 1024px) {
     .cover__overlay {
         min-width: 100%;
