--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -19,6 +19,13 @@
     }
 }
 
+@media screen and (max-width: 600px) {
+    .cover__title {
+        font-size: 32px;
+        line-height: 1.09;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .cover__title {
         max-width: 75%;
