--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,19 +5,24 @@
     padding: 92px 48px 24px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .footer {
-        padding-left: 24px;
-        padding-right: 24px;
+        padding: 88px 24px 24px;
     }
+}
+
+/*Дополнительные стили на случай не стандартных размеров*/
+@media screen and (max-width: 720px) {
+    .footer {
+        flex-direction: column;
+        gap: 48px;
+        padding-top: 70px;
+    }   
 }
 
 @media screen and (max-width: 320px) {
     .footer {
-        flex-direction: column;
         align-items: start;
-        gap: 48px;
-        padding-left: 16px;
-        padding-right: 16px;
+        padding: 64px 0 24px 16px;
     }
 }
