--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,20 +1,15 @@
 .gallery {
     padding: 92px 48px 0;
-    max-width: calc(100% - 96px);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .gallery {
-        padding-left: 24px;
-        padding-right: 24px;
-        max-width: calc(100% - 48px);
+        padding: 88px 24px 0;
     }
 }
 
 @media screen and (max-width: 320px) {
     .gallery {
-        padding-left: 16px;
-        padding-right: 16px;
-        max-width: calc(100% - 32px);
+        padding: 64px 16px 0;
     }
 }
