--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,16 +4,15 @@
     padding: 28px 48px 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .header {
         padding-left: 24px;
         padding-right: 24px;
-    }   
+    }
 }
 
 @media screen and (max-width: 320px) {
     .header {
         padding: 16px 16px 0;
     }
-    
 }
