--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,6 +8,7 @@
 
 @media screen and (max-width: 320px) {
     .intro__title {
+        max-width: 80%;
         font-size: 32px;
         line-height: 1.09;
     } 
