--- a/blocks/lead/__illustration/lead__illustration.css
+++ b/blocks/lead/__illustration/lead__illustration.css
@@ -1,22 +1,17 @@
 .lead__illustration {
     margin: 0;
-    margin-top: 64px;
+    padding-top: 64px;
+    max-width: 100%;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 321px) {
     .lead__illustration {
-        max-width: calc(100% - 96px);
-    } 
-}
-
-@media screen and (max-width: 768px) {
-    .lead__illustration {
-        max-width: 100%;
-    } 
+        padding-top: 56px;
+    }
 }
 
 @media screen and (max-width: 320px) {
     .lead__illustration {
-        margin-top: 40px;
+        padding-top: 40px;
     } 
 }
