--- a/blocks/lead/__img-caption/lead__img-caption.css
+++ b/blocks/lead/__img-caption/lead__img-caption.css
@@ -2,10 +2,17 @@
     font-size: 10px;
     line-height: 1.4;
     text-transform: uppercase;
+    letter-spacing: 1.5px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .lead__img-caption {
-        margin-left: 24px;
+        padding-left: 24px;
     } 
+}
+
+@media screen and (max-width: 320px) {
+    .lead__img-caption {
+        padding-left: 16px;
+    }
 }
