--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,4 +2,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 148px;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+    .lead {
+        padding: 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        padding: 0;
+        min-width: 100%;
+    }
 }
