--- a/blocks/place/__name/place__name.css
+++ b/blocks/place/__name/place__name.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 768px) {
     .place__name {
-        max-width: 70%;
+        max-width: 97%;
         font-size: 42px;
         line-height: 1.1;
     }
@@ -17,6 +17,9 @@
 
 @media screen and (max-width: 320px) {
     .place__name {
+        font-size: 32px;
+        line-height: 1.09;
         padding-left: 16px;
+        order: -1;
     }  
 }
