--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,22 +5,26 @@
     padding: 92px 148px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 769px) {
     .places {
         padding-left: 48px;
         padding-right: 48px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .places {
+        gap: 73px;
         padding: 88px 24px 90px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        padding: 64px 0 66px;
         gap: 50px;
+        padding: 64px 0 66px;
     }
+    
 }
