--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -18,6 +18,7 @@
     min-width: 100%;
     min-height: 100%;
     background-color: rgba(42,44,47,0.3);
+    transition: .6s;
 }
 
 .cover__link:hover + .cover__overlay:before {
