--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,6 +5,11 @@
     font-size: 18px;
     line-height: 1.22;
     font-weight: 400;
+    transition: .6s;
+}
+
+.place__link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 320px) {
