--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,6 +1,8 @@
 .place__link {
     grid-row: 1/2;
     grid-column: 2/-1;
+    display: inline;
+    align-self: flex-start;
     color: inherit;
     font-size: 18px;
     line-height: 1.22;
