--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,7 +4,8 @@
     left: 48px;
     min-width: calc(100% - 96px);
     height: 100%;
-    background: url('../../../images/cover-trains.jpg') no-repeat 0 0;
+    background: url('../../../images/cover-trains.jpg') no-repeat;
+    background-position: center center;
     background-size: cover;
     z-index: -1;
     cursor: pointer;
@@ -18,7 +19,7 @@
     min-width: 100%;
     min-height: 100%;
     background-color: rgba(42,44,47,0.3);
-    transition: .6s;
+    transition: background-color .6s;
 }
 
 .cover__link:hover + .cover__overlay:before {
