--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,11 @@
-.copyright {
+.footer__copyright {
     margin: 0;
     font-size: 14px;
     line-height: 1.14;
 }
 
 @media screen and (max-width: 320px) {
-    .copyright {
+    .footer__copyright {
         line-height: 1;
     }
 }
