--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,7 +5,7 @@
     padding: 92px 48px 24px;
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
+@media screen and (max-width: 768px) {
     .footer {
         padding: 88px 24px 24px;
     }
@@ -15,14 +15,15 @@
 @media screen and (max-width: 720px) {
     .footer {
         flex-direction: column;
-        gap: 48px;
+        align-items: start;
+        gap: 25px;
         padding-top: 70px;
-    }   
+    }
 }
 
 @media screen and (max-width: 320px) {
     .footer {
-        align-items: start;
+        gap: 48px;
         padding: 64px 0 24px 16px;
     }
 }
