--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,14 +14,7 @@
     }
 }
 
-@media screen and (max-width: 768px) and (min-width: 321px) {
-    .lead__title {
-       font-size: 96px;
-       line-height: 1.04;
-    }   
-}
-
-/*Дополнительные стили на случай не стандартных размеров*/
+/*Дополнительные стили на случай нестандартных размеров экранов*/
 @media screen and (max-width: 720px) and (min-width: 321px) {
     .lead__title {
         font-size: 46px;
