--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@
     }
 }
 
-/*Дополнительные стили на случай не стандартных размеров*/
+/*Дополнительные стили для нестандартных дисплеев*/
 @media screen and (max-width: 720px) {
     .footer {
         flex-direction: column;
