--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,17 +1,51 @@
 .cover__link {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    min-width: 100%;
+    min-height: 740px;
+    color: inherit;
+    text-decoration: none;
+    background: url('../../../images/cover-trains.jpg') no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.cover__link:after {
+    content: "";
     position: absolute;
     top: 0;
-    left: 48px;
-    display: block;
-    min-width: calc(100% - 96px);
-    height: 100%;
-    z-index: 1;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: rgba(42,44,47,0.3);
+    transition: background-color .6s;
+}
+
+.cover__link:hover:after {
+    background-color: rgba(42,44,47,0.8);
 }
 
 @media screen and (max-width: 1024px) {
     .cover__link {
         left: 0;
         padding: 0;
-        min-width: 100%;
+        min-height: 640px;
     }
+}
+
+@media screen and (max-width: 768px) and (min-width: 321px) {
+    .cover__link {
+        min-height: 480px;
+    }  
+}
+
+@media screen and (max-width: 320px) {
+    .cover__link {
+        gap: 16px;
+        min-height: 200px;
+    }  
 }
