--- a/blocks/langs/__link/langs__link.css
+++ b/blocks/langs/__link/langs__link.css
@@ -3,7 +3,7 @@
     font-size: 24px;
     line-height: 1.17;
     text-decoration: none;
-    transition: .6s;
+    transition: opacity .6s;
     cursor: pointer;
 }
 
