--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -14,7 +14,7 @@
     }
 }
 
-/*Дополнительные стили на случай нестандартных размеров экранов*/
+/*Дополнительные стили для нестандартных дисплеев*/
 @media screen and (max-width: 720px) and (min-width: 321px) {
     .lead__title {
         font-size: 46px;
