--- a/blocks/menu/__link/menu__link.css
+++ b/blocks/menu/__link/menu__link.css
@@ -4,7 +4,7 @@
     font-size: 16px;
     line-height: 1.12;
     text-decoration: none;
-    transition: .6s;
+    transition: opacity .6s;
 }
 
 .menu__link:hover {
