--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,7 +7,7 @@
     font-size: 18px;
     line-height: 1.22;
     font-weight: 400;
-    transition: .6s;
+    transition: opacity .6s;
 }
 
 .place__link:hover {
