--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,10 +5,26 @@
     padding: 92px 148px;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 769px) {
+/*Дополнительный стили для нестандартных дисплеев*/
+@media screen and (max-width: 1150px) and (min-width: 1023px) {
+    .places {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 931px) {
     .places {
         padding-left: 48px;
         padding-right: 48px;
+    }
+}
+
+/*Дополнительные стили для нестандартных дисплеев*/
+@media screen and (max-width: 930px) and (min-width: 767px) {
+    .places {
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
@@ -16,8 +32,6 @@
     .places {
         gap: 73px;
         padding: 88px 24px 90px;
-        padding-left: 24px;
-        padding-right: 24px;
     }
 }
 
