fix bug with wrong selector

--- a/blocks/langs/__link/langs__link.css
+++ b/blocks/langs/__link/langs__link.css
@@ -7,14 +7,13 @@
     cursor: pointer;
 }
 
-.langs__item:hover {
+.langs__link:hover {
     opacity: .8;
 }
 
 @media screen and (max-width: 320px) {
-    .langs__item {
+    .langs__link {
         font-size: 18px;
         line-height: 1.11;
-    }
-    
+    }  
 }
