--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,6 +4,11 @@
     line-height: 1.14;
 }
 
+.footer__copyright::before {
+    content: '\00A9';
+    margin-right: 2px;
+}
+
 @media screen and (max-width: 320px) {
     .footer__copyright {
         line-height: 1;
